[project]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = [
    {name = "AlienneSilva",email = "88863077+AlienneSilva@users.noreply.github.com"}
]
requires-python = ">=3.14,<4.0"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-sqlalchemy",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "flask-migrate",
    "flask-jwt-extended (>=4.7.4,<5.0.0)",
    "markupsafe (>=3.0.3,<4.0.0)",
    "gunicorn"
]

[tool.pytest]
addopts = ["-vvv"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock"
]
